# CeNTREX-TlF-Lindblad

./: README.md  pyproject.toml
centrex_TlF_lindblad/: __init__.py  generate_hamiltonian.py  generate_julia_code.py  generate_system_of_equations.py  julia_common.jl  ode_parameters.py  utils.py  utils_compact.py  utils_decay.py  utils_julia.py  utils_setup.py  utils_solver.py  utils_solver_progress.py
examples/: R2 transition in electric field.ipynb  R2 transition.ipynb  transition in electric field.ipynb
tests/: C_array.npy  obe_system.pkl  test_centrex_tlf_lindblad.py  test_generate_hamiltonian.py  test_generate_julia_code.py  test_generate_qn_compact.pkl  test_system_of_equations_to_lines.pkl  test_utils_compact.py  test_utils_decay.py  test_utils_setup.py
