[tool.poetry]
name = "CeNTREX-TlF-Lindblad"
version = "0.2.0"
description = ""
authors = ["ograsdijk <o.grasdijk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
sympy = "^1.1"
centrex_tlf_hamiltonian = "^0.2"
centrex_tlf_couplings = "^0.2"
julia = "^0.5.7"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "julia"
]
ignore_missing_imports = true
